src/app/components/nav/nav.component.css
/* Color palette https://coolors.co/75f4f4-ff5b5e-ec4067-a01a7d-311847 */
.main-level,
.nested {
  list-style: none;
  margin: 0;
  padding: 0;
}

.menu-button {
  fill: white;
  vertical-align: middle;
  margin-top: 4px;
}

.logo {
  display: inline-block;
  font-size: 1rem;
  font-weight: 700;
  color: white;
  margin: 0;
  padding: 0;
}

.nav-item {
  color: white;
  padding: .7rem 1rem;
  display: block;
  text-decoration: none;
}

nav {
  display: none;
}

nav[aria-expanded="true"] {
  display: block;
}

nav ul li + li {
  border-top: solid 1px #311847;
}

/* Desktop/Tablet styles */
@media only screen and (min-width: 600px) {
  nav, nav[aria-expanded="true"] {
    display: inline-block;
  }

  nav ul li + li { border: none;}

  .menu-button {display: none;}

  .main-level > li {
    display: inline-block;
    position: relative;
  }

  .nav-item, .logo {
    padding: 1rem;
  }

  .nested {
    position: absolute;
    top: 3rem;
    background-color: #a01a7d;
  }

  .nested > li {

    margin: 1rem;
  }

}

